--- a/css/style.css
+++ b/css/style.css
@@ -3,38 +3,42 @@
     box-sizing: border-box;
 }
 
+/*
 @font-face {
     font-family: 'Roboto';
-    src: url('../font/roboto-regular-webfont.woff2') format('woff2'), url('../font/roboto-regular-webfont.woff') format('woff');
+    src: url('../fonts/roboto-flex.woff2') format('woff2'), url('../fonts/roboto-flex.woff') format('woff');
     font-display: swap;
-    font-weight: 550;
+    font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('../font/roboto-bold-webfont.woff2') format('woff2'), url('../font/roboto-bold-webfont.woff') format('woff');
+    src: url('../fonts/roboto-flex.woff2') format('woff2'), url('../fonts/roboto-flex.woff') format('woff');
     font-display: swap;
-    font-weight: 750;
+    font-weight: 700;
     font-style: normal;
 }
-
+*/
 
 :root {
     --white: #fff;
     --codgray: #090909;
     --electric-violet: #5337FF;
+    --dove-gray: #6A6A6A;
+    --blaze-orange: #FF6700;
 }
 
-
 body {
-    font-family: 'Roboto', Arial, sans-serif;
+    /*font-family: 'Roboto', Arial, sans-serif;*/
+    font-family: 'Roboto Flex', sans-serif;
     font-style: normal;
-    font-weight: 550;
+    font-weight: 500;
     font-size: 20px;
     line-height: 28px;
     letter-spacing: 0px;
     text-align: left;
+    /*position: relative;*/
     color: var(--codgray);
     background-color: var(--white);
     max-width: 1920px;
@@ -51,6 +55,12 @@ body {
     margin: 80px 0;
 }
 */
+.img {
+    display: block;
+    max-height: 100%;
+    width: auto;
+}
+
 .ul-reset {
     margin: 0;
     padding: 0;
@@ -61,6 +71,7 @@ body {
     margin: 0;
 }
 
+/*-----title-----*/
 .title {
     font-size: 40px;
     line-height: 44px;
@@ -78,28 +89,96 @@ body {
     line-height: 36px;
 }
 
+/*----------btn---------------*/
+.btn {
+    font-family: inherit;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 750;
+    letter-spacing: 0px;
+    border: none;
+    color: inherit;
+    cursor: pointer;
+    background-color: transparent;
+    padding: 0;
+
+}
+
+.btn--orange {
+    display: block;
+    color: var(--white);
+    background-color: var(--blaze-orange);
+    border-radius: 8px;
+    padding: 8px 16px;
+}
+
+/*----------link--------------*/
+.link {
+    display: block;
+}
+
+.link--social {
+    height: 40px;
+    width: 40px;
+}
+
+
 /*---------header--------*/
 
 .header {
+    /*position: absolute;
+    top: 0px;*/
     display: flex;
-    outline: 1px solid green;
+    align-items: center;
+    width: 100%;
+    background-color: var(--white);
+    z-index: 500;
+    padding: 40px 75px;
+}
+
+.headre__logo {
+    margin-right: auto;
 }
 
 .nav__list {
     display: flex;
 }
 
+.header__btn {
+    margin-right: 30px;
+}
+
+.social {
+    display: flex;
+    align-items: center;
+}
+
+.social__item:not(:last-child) {
+    margin-right: 20px;
+}
+
+
 
 /*-----main-------*/
 .main {
-    position: relative;
+    /*position: relative;*/
     display: flex;
 }
 
-.swiper {
-    outline: 1px solid red;
+.swiper--main {
     width: 100%;
-    height: 600px;
+    height: calc(100vh - 120px);
+}
+
+.swiper-slide {
+    /*background-color: rgb(252, 242, 208);*/
+    /* padding: 120px 0;*/
+}
+
+/*-----swiper--card------*/
+.swiper--card {
+    width: 100%;
+    /*height: 600px;*/
 }
 
 /*------pagination-----*/
@@ -150,4 +229,99 @@ body {
         opacity 0.3s ease-in-out,
         outline 0.2s ease-in-out,
         outline-offset 0.1s ease-in-out;
+}
+
+/*------hero------*/
+.hero {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    /* padding-top: 50px;
+    padding-bottom: 50px;*/
+}
+
+.hero__title {
+    max-width: 500px;
+    margin-right: 50px;
+}
+
+.hero__img {
+    min-width: 300px;
+}
+
+/*-----how-----*/
+.how {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.how__title {
+    margin-bottom: 50px;
+}
+
+.how__list {
+    display: flex;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+}
+
+.card--how {
+    width: 30%;
+    background-color: var(--dove-gray);
+    border-radius: 24px;
+    padding: 25px 25px 0;
+}
+
+.how__item:not(:last-child) {
+    margin-right: auto;
+}
+
+.how__item:nth-child(1) {
+    background-color: #5337FF;
+}
+
+.how__item:nth-child(2) {
+    background-color: #56ABFF;
+}
+
+.how__item:nth-child(3) {
+    background-color: #883FFF;
+}
+
+.card__num {
+    font-size: 36px;
+    font-weight: bold;
+    color: var(--white);
+    margin-bottom: 20px;
+}
+
+.card__title {
+    color: var(--white);
+    margin-bottom: auto;
+}
+
+.w {
+    margin-top: 30px;
+}
+
+.how__img {
+    width: 100%;
+}
+
+
+
+
+/*----------footer--------------*/
+.footer {
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    width: 100%;
+    background-color: var(--white);
+    z-index: 499;
+    padding: 40px 75px;
 }
